[package]
name = "dpdu-api-types"
version = "0.9.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>", "RichardWGNR <171420035+RichardWGNR@users.noreply.github.com>"]
edition = "2021"
description = "An implementation of the core D-PDU (ISO22900-2) library in Rust"
license = "MIT"
repository = "https://github.com/RichardWGNR/dpdu-api-types"
readme = "README.md"
keywords = ["ISO22900", "dpdu", "ecu", "VCI", "diagnostics"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

